cleanup and final touches